--- a/dotfiles/config/polybar/config.ini
+++ b/dotfiles/config/polybar/config.ini
@@ -28,6 +28,8 @@ line-color = ${color.ac}
 border-bottom-size = 0
 border-color = ${color.ac}
 
+height=55
+
 padding = 2
 
 module-margin-left = 1
@@ -35,7 +37,7 @@ module-margin-right = 1
 
 wm-restack = bspwm
 
-font-0 = "Iosevka Nerd Font:size=22;2"
+font-0 = "Iosevka Nerd Font:size=18;2"
 font-1 = "Iosevka Nerd Font:bold:size=18;2"
 font-2 = unifont:fontformat=truetype:size=20:antialias=true;2
 font-3 = "Siji:size=20;5"
@@ -46,17 +48,17 @@ font-6 = "Font Awesome 5 Free Solid"
 [bar/primary]
 inherit = bar/main
 width = 23.7%
-height = 48
+#height = 48
 
 offset-x = 20
 offset-y = 20
 
-modules-left = sysmenu date time alsa ssid network
+modules-left = sysmenu date time alsa wifi eth 
 
 [bar/secondary]
 inherit = bar/main
 width = 35%
-height = 48
+#height = 48
 
 offset-x = 63.5%
 offset-y = 20
@@ -74,19 +76,19 @@ pseudo-transparency = true
 
 modules-left = workspaces name title
 
-[bar/secondary-lvds]
-inherit = bar/main
-monitor = LVDS1
+#[bar/secondary-lvds]
+#inherit = bar/main
+#monitor = LVDS1
 
-width = 35%
-height = 48
+#width = 35%
+#height = 48
 
-offset-x = 63.5%
-offset-y = 20
+#offset-x = 63.5%
+#offset-y = 20
 
-module-margin-left = 0
+#module-margin-left = 0
 
-modules-left = workspaces name title
+#modules-left = workspaces name title
 
 [bar/music]
 inherit = bar/main
@@ -96,13 +98,13 @@ module-margin-left = 0
 background = ${color.pishade8}
 foreground = ${color.bg}
 
-width = 12%
-height = 48
+width = 20%
+#height = 48
 
-offset-x = 23%
+offset-x = 22%
 offset-y = 20
 
-modules-right = spotify-icon spotify
+modules-right = mpd-icon mpd
 
 ;; Modules
 
@@ -122,9 +124,9 @@ modules-right = spotify-icon spotify
 ;label-connected = 直
 ;label-disconnected = 睊
 
-[module/ssid]
+[module/wifi]
 type = internal/network
-interface = enp1s0
+interface = wlp3s0
 
 interval = 1.0
 accumulate-stats = true
@@ -140,8 +142,31 @@ format-disconnected-foreground = ${color.purple}
 format-disconnected-font = 2
 
 ;label-connected = 直 %local_ip%
-label-connected = 直 Coelho
-label-disconnected = 睊 NA
+label-connected = 直 Online
+;label-disconnected = 睊 Offline
+label-disconnected = ""
+
+[module/eth]
+type = internal/network
+interface = enp0s20u1u4
+
+interval = 1.0
+accumulate-stats = true
+unknown-as-up = true
+
+label-connected-maxlen = 8
+
+format-connected = <label-connected>
+format-connected-font = 2
+format-connected-foreground = ${color.purple}
+format-disconnected = <label-disconnected>
+format-disconnected-foreground = ${color.purple}
+format-disconnected-font = 2
+
+;label-connected = 直 %local_ip%
+label-connected = " Online"
+;label-disconnected = 睊 Offline
+label-disconnected = ""
 
 [module/alsa]
 type = internal/alsa
@@ -254,11 +279,31 @@ interval = 1
 format = <label>
 exec = echo " "
 
+[module/mpd-icon]
+type=custom/script
+interval = 1
+format = <label>
+exec = echo " "
+
 [module/spotify-icon]
 type = custom/script
 interval = 1
 format = <label>
 exec = echo " "
+
+[module/mpd] 
+type = internal/mpd
+format-online = <label-song>  <icon-prev> <icon-stop>  <toggle>  <icon-next>
+
+icon-prev = 
+icon-stop = 
+icon-play = 
+icon-pause =    
+icon-next = 
+
+label-song-maxlen = 25  
+label-song-ellipsis = true
+
 
 [module/spotify]
 type = custom/script
