--- a/dotfiles/config/polybar/config.ini
+++ b/dotfiles/config/polybar/config.ini
@@ -50,17 +50,17 @@ inherit = bar/main
 width = 23.7%
 #height = 48
 
-offset-x = 20
+offset-x = 22
 offset-y = 20
 
-modules-left = sysmenu date time alsa wifi eth 
+modules-left = sysmenu date time alsa wifi eth battery
 
 [bar/secondary]
 inherit = bar/main
 width = 35%
 #height = 48
 
-offset-x = 63.5%
+offset-x = 64%
 offset-y = 20
 
 module-margin-left = 0
@@ -305,6 +305,8 @@ label-song-maxlen = 25
 label-song-ellipsis = true
 
 
+label-song =  %title%
+
 [module/spotify]
 type = custom/script
 interval = 1
@@ -313,3 +315,41 @@ format = <label>
 format-foreground = ${color.fg}
 format-background = ${color.pishade8}
 exec = python ~/.config/polybar/scripts/spotify_status.py -f '{song}'
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ADP1      
+full-at = 98
+
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = #ffb52a
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
+
+format-full-prefix = ""
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
+
+ramp-capacity-0 = 
+ramp-capacity-1 =    
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+ramp-capacity-foreground = ${colors.foreground-alt}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-foreground = ${colors.foreground-alt}
+animation-discharging-framerate = 750
